# kedr-callback-operations-interception

./: README.md
sources/: AUTHORS  CMakeLists.txt  INSTALL  KnownIssues  NEWS  README  config_kernel.h.in
sources/cmake/modules/: CMakeParseArguments.cmake  FindKbuild.cmake  build_testing.cmake  cmake_useful.cmake  dkms_system.cmake  examples_system.cmake  install_testing.cmake  install_testing_ctest.cmake  kbuild_system.cmake  kedr_coi_testing.cmake  kmodule.cmake  lookup_module_symbol.cmake  multi_kernel.cmake  path_prefixes.cmake  template_generation.cmake
sources/core/: CMakeLists.txt  kedr_coi_base.c  kedr_coi_base_internal.h  kedr_coi_global_map.c  kedr_coi_global_map_internal.h  kedr_coi_hash_table.c  kedr_coi_hash_table.h  kedr_coi_hash_table_internal.h  kedr_coi_instrumentor_internal.h  kedr_coi_instrumentors.c  kedr_coi_instrumentors_impl.c  kedr_coi_interceptors.c  kedr_coi_module.c  kedr_coi_payloads_container.c  kedr_coi_payloads_foreign_container.c  kedr_coi_payloads_foreign_internal.h  kedr_coi_payloads_internal.h  payloads.c  payloads.h
sources/core/tests/: CMakeLists.txt  test_harness.h
sources/cpack/: CPackOptions.cmake
sources/doc/: CMakeLists.txt
sources/doc/docbook/: api_reference.xml  config.xsl.cmake  create_interceptors_using_kedr_gen.xml  description.xml  entities.xml.cmake  foreign_interceptor_creation.xml  glossary.xml  install.xml  interceptor_creation.xml  intro.xml  kedr-coi-doc.css  main.xml.cmake  objects_watching.xml  overview.xml  payload.xml  pre_existed_interceptors.xml  using_kedr_coi.xml
sources/doc/html/: api_reference.html  create_interceptors_using_kedr_gen.html  glossary.html  index.html  install.html  intro.html  overview.html  pre_existed_interceptors.html  using_kedr_coi.html
sources/examples/: CMakeLists.txt
sources/examples/file_access_counter/: CMakeLists.txt  Kbuild.in  README  dentry_operations.data  file_access_counter.c  file_system_type.data  fs_interception.c  fs_interception.h  functions.yaml  inode_file_operations.data  inode_operations.data  makefile.in  module.c  super_operations.data
sources/examples/read_counter/: CMakeLists.txt  Kbuild.in  README  cdev_file_operations.data  cdev_file_operations.yaml  cfake.c  cfake.h  file_operations.data  functions.data  kedr_sample_target  makefile.in  read_counter.c  read_counter.conf.in  read_counter.h
sources/include/: CMakeLists.txt
sources/include/kedr-coi/: operations_interception.h
sources/interceptors/: CMakeLists.txt
sources/interceptors/dentry_operations/: CMakeLists.txt  d_automount.data  d_automount.yaml  d_compare.data  d_compare_1qstr.yaml  d_compare_1qstr_with_inode.yaml  d_compare_2qstr.yaml  d_compare_with_inode.data  d_compare_with_inode.yaml  d_delete.data  d_delete_const.data  d_delete_const.yaml  d_delete_noconst.yaml  d_dname.yaml  d_hash.data  d_hash_const.yaml  d_hash_simple.yaml  d_hash_with_inode.data  d_hash_with_inode.yaml  d_iput.yaml  d_manage.data  d_manage.yaml  d_release.yaml  d_revalidate_accept_nd.yaml  d_revalidate_accept_uint.yaml  header.yaml  interceptor_common.data
sources/interceptors/file_operations/: CMakeLists.txt  aio_fsync.yaml  aio_read.yaml  aio_write.yaml  compat_ioctl.yaml  fallocate.data  fallocate.yaml  fasync.yaml  flock.yaml  flush.yaml  fsync.data  fsync_simple.yaml  fsync_with_dentry.data  fsync_with_dentry.yaml  fsync_with_range.data  fsync_with_range.yaml  fsync_without_dentry.data  get_unmapped_area.yaml  header.yaml  interceptor_common.data  interceptor_common.yaml  ioctl.data  ioctl.yaml  iterate.yaml  llseek.yaml  lock.yaml  mmap.yaml  open.yaml  operations_include.h  poll.yaml  read.yaml  readdir.yaml  release.yaml  sendpage.yaml  setlease_with_priv.yaml  setlease_without_priv.yaml  splice_read.yaml  splice_write.yaml  unlocked_ioctl.yaml  write.yaml
sources/interceptors/file_system_type/: CMakeLists.txt  get_sb.data  get_sb.yaml  header.yaml  interceptor_common.data  kill_sb.yaml  mount.data  mount.yaml
sources/interceptors/inode_file_operations/: CMakeLists.txt  interceptor.data  interceptor.yaml
sources/interceptors/inode_operations/: CMakeLists.txt  check_simple_setattr.c  create_accept_bool.yaml  create_accept_int_nd.yaml  create_accept_umode_nd.yaml  fallocate.data  fallocate.yaml  fiemap.yaml  follow_link.yaml  get_acl.yaml  getattr.yaml  getxattr.yaml  header.yaml  interceptor_common.data  interceptor_common.yaml  link.yaml  listxattr.yaml  lookup_accept_nd.yaml  lookup_accept_uint.yaml  mkdir_accept_int.yaml  mkdir_accept_umode.yaml  mknod_accept_int.yaml  mknod_accept_umode.yaml  permission.yaml  put_link.yaml  readlink.yaml  removexattr.yaml  rename.yaml  rmdir.yaml  set_acl.yaml  setattr.yaml  setattr_via_inode_setattr.data  setattr_via_simple_setattr.data  setxattr.yaml  symlink.yaml  truncate.yaml  truncate_range.yaml  unlink.yaml
sources/interceptors/super_operations/: CMakeLists.txt  alloc_inode.yaml  bdev_try_to_free_page.yaml  clear_inode.data  clear_inode.yaml  delete_inode.data  delete_inode.yaml  destroy_inode.yaml  dirty_inode.data  dirty_inode_with_flags.data  dirty_inode_with_flags.yaml  dirty_inode_without_flags.yaml  drop_inode.data  drop_inode_return_int.data  drop_inode_return_int.yaml  drop_inode_return_void.yaml  evict_inode_use_clear_inode.yaml  evict_inode_use_end_writeback.yaml  evict_inode_use_final.yaml  freeze_fs.yaml  header.yaml  interceptor_common.data  put_super.yaml  remount_fs.yaml  show_devname.data  show_devname_accept_dentry.yaml  show_devname_accept_mnt.yaml  show_options_accept_dentry.yaml  show_options_accept_mnt.yaml  show_path.data  show_path_accept_dentry.yaml  show_path_accept_mnt.yaml  show_stats_accept_dentry.yaml  show_stats_accept_mnt.yaml  statfs.yaml  sync_fs.yaml  umount_begin.yaml  unfreeze_fs.yaml  use_clear_inode.c  use_truncate_inode_pages_final.c  (+5 more)
sources/templates/: CMakeLists.txt
sources/templates/kedr_coi_creation_interceptor.c/: block_block.tpl  document.tpl
sources/templates/kedr_coi_interceptor/: id_type.tpl  (+13 more)
sources/tests/: CMakeLists.txt
sources/tools/: CMakeLists.txt
sources/try_operation/: README.developer
(+337 files in other folders)
